--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "mongoose": "^6.7.0",
-    "nodemon": "^2.0.20"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0"
   }
 }
